--- a/SCSS/components/_main.scss
+++ b/SCSS/components/_main.scss
@@ -4,7 +4,13 @@
 //----------- Tab & Search Area -----------//
 .sidenav,
 .dashboard {
-  padding-bottom: $body-space;
+  @include tablet {
+    padding-bottom: $body-space;
+  }
+}
+
+.sidenav {
+  @include flex-between;
 }
 
 .sidenav-item {
@@ -19,7 +25,7 @@
 
 .sidenav-item img{
   opacity: 70%;
-  width: 45px;
+  width: 40px;
   @include tablet {
     width: auto;
   }
@@ -35,8 +41,10 @@
 
 //----------- Tab & Search Area -----------//
 .tab-and-search {
-  @include flex-between;
-  background-color: $background-gray;
+  @include tablet {
+    @include flex-between;
+    background-color: $background-gray;
+  }
 }
 
 // --- Search bar
@@ -45,8 +53,6 @@
   align-items: center;
   height: 70px;
   border-top-right-radius: 5px;
-  padding-left: $body-space;
-  padding-right: $body-space;
   background-color: $white;
   border-right: $border-style;
 }
@@ -55,24 +61,29 @@
 
 .search {
   display: flex;
-  justify-content: flex-end;
   align-items: center;
   width: 100%;
   height: 70px;
   border-bottom: $border-style;
   margin: auto 0;
+  @include tablet {
+    justify-content: flex-end;
+  }
 }
 
 .search input {
-  width: 40%;
-  height: 45px;
-  padding-left: $body-space;
-  outline-color: $border;
-  margin-right: $body-space;
+  width: 100%;
   font-weight: 600;
+  height: 45px;
   outline: none;
   border-radius: 5px;
   border: $border-style;
+  @include tablet {
+    width: 40%;
+    padding-left: $body-space;
+    padding-right: 0;
+    outline-color: $border;
+  }
 }
 
 ::placeholder {
@@ -81,14 +92,17 @@
 
 //----------- Alert -----------//
 .alerts {
-  margin: $body-space;
+  margin: $body-space-mobile;
   padding: 15px;
-  height: 45px;
+  height: auto;
   border-radius: 5px;
   @include flex-between;
   font-size: $primary-font-size;
   color: $white;
   background-color: $primary-color;
+  @include tablet {
+    margin: $body-space;
+  }
 }
 
 .alerts p {
@@ -98,8 +112,12 @@
 
 //----------- Charts & Period Toggles -----------//
 canvas {
-  padding-top: $body-space;
-  padding-bottom: $body-space;
+  padding-top: $body-space-mobile;
+  padding-bottom: $body-space-mobile;
+  @include tablet {
+    padding-top: $body-space;
+    padding-bottom: $body-space;
+  }
 }
 
 // --- Traffic
@@ -127,34 +145,65 @@ canvas {
   border-bottom: $border-style;
 }
 
+.chart-container {
+  width: 90vw;
+  text-align: center;
+  @include tablet {
+    width: auto;
+  }
+}
+
 // --- Daily Traffic & Mobile Users
 .daily-traffic,
 .mobile-users {
-  padding: $body-space;
+  padding: $body-space-mobile;
   padding-bottom: 0;
   border-bottom: $border-style;
+  @include tablet {
+    padding: $body-space;
+  }
+}
+
+.daily-traffic,
+.mobile-users {
+  width: 100vw;
+  @include tablet {
+    width: auto;
+  }
 }
 
 .daily-traffic {
-  border-right: $border-style;
+  @include tablet {
+    border-right: $border-style;
+  }
 }
 
 //----------- Social Stats -----------//
-.social-stats-block {
-  padding: $body-space;
+
+
+.social-stats-block h2,
+.column h2 {
+  padding: $body-space-mobile;
+  @include tablet {
+    padding: $body-space;
+  }
 }
 
-.social-stats-block h2 {
-  padding-bottom: $body-space;
+.social-container {
+  padding-left: $body-space-mobile;
+  padding-right: $body-space-mobile;
 }
 
 .social-card {
   display: inline-flex;
   align-items: center;
-  padding: $body-space;
+  padding: $body-space-mobile;
   background-color: $background-gray;
   border: $border-style;
   border-radius: 5px;
+  @include tablet {
+    padding: $body-space;
+  }
 }
 
 .social-icon {
@@ -203,36 +252,39 @@ canvas {
 
 //----------- Member Activity -----------//
 .member-activity {
-  margin-top: $body-space;
+  margin-top: $body-space-mobile;
   border-top: $border-style;
   background-color: $border;
+  @include tablet {
+    margin-top: $body-space;
+  }
 }
 
 .column {
   background-color: $white;
 }
 
-.feed,
-.column h2 {
-  padding-right: $body-space;
-  padding-left: $body-space;
-}
-
-.column h2 {
-  padding-top: $body-space;
-  padding-bottom: $body-space;
-}
+// .column h2 {
+//   padding-top: $body-space-mobile;
+//   padding-bottom: $body-space-mobile;
+//   @include tablet {
+//     padding-top: $body-space;
+//     padding-bottom: $body-space;
+//   }
+// }
 
 .feed {
   border-bottom: $border-style;
 }
 
 .feed-item {
-  display: flex;
-  align-items: center;
   padding-top: ($body-space * .5);
   padding-bottom: ($body-space * .5);
   border-bottom: $border-style;
+  @include tablet {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .feed-item:first-of-type {
@@ -241,17 +293,18 @@ canvas {
 
 .feed-item:last-of-type {
   border: none;
-  padding-bottom: $body-space;
+  padding-bottom: $body-space-mobile;
+  @include tablet {
+    padding-bottom: $body-space;
+  }
 }
 
 .feed-item-text {
-  @include flex-between;
   width: 100%;
   height: 35px;
-}
-
-.user-image {
-  margin-right: 15px;
+  @include tablet {
+    @include flex-between;
+  }
 }
 
 .feed-subtext,
@@ -261,19 +314,13 @@ canvas {
 }
 
 // --- activity forms
-.message-user {
-  padding-left: $body-space;
-  padding-right: $body-space;
-}
 
 .message-user input,
 .message-user textarea,
 .message-user button {
   display: block;
   width: 100%;
-  padding-left: $body-space;
   outline-color: $border;
-  margin-right: $body-space;
   font-weight: 600;
   outline: none;
   border-radius: 5px;
@@ -302,8 +349,12 @@ canvas {
 }
 
 .toggle-area {
-  margin-left: $body-space;
-  margin-right: $body-space;
+  margin-left: $body-space-mobile;
+  margin-right: $body-space-mobile;
+  @include tablet {
+    margin-left: $body-space;
+    margin-right: $body-space;
+  }
 }
 
 .switch-light {
@@ -312,5 +363,8 @@ canvas {
 }
 
 .switch-light:first-of-type {
-  margin-bottom: $body-space;
+  margin-bottom: $body-space-mobile;
+  @include tablet {
+    margin-bottom: $body-space;
+  }
 }
